substrate/frame/support/test/tests/pallet_ui/hooks_invalid_item.stderr
error[E0107]: missing generics for trait `Hooks`
  --> tests/pallet_ui/hooks_invalid_item.rs:29:18
   |
29 |     impl<T: Config> Hooks for Pallet<T> {}
   |                     ^^^^^ expected 1 generic argument
   |
note: trait defined here, with 1 generic parameter: `BlockNumber`
  --> $WORKSPACE/substrate/frame/support/src/traits/hooks.rs
   |
   | pub trait Hooks<BlockNumber> {
   |           ^^^^^ -----------
help: add missing generic argument
   |
29 |     impl<T: Config> Hooks<BlockNumber> for Pallet<T> {}
   |                          +++++++++++++

error[E0277]: the trait bound `pallet::Pallet<T>: Hooks<<<<T as frame_system::Config>::Block as frame_support::sp_runtime::traits::Block>::Header as frame_support::sp_runtime::traits::Header>::Number>` is not satisfied
  --> tests/pallet_ui/hooks_invalid_item.rs:28:12
   |
28 |     #[pallet::hooks]
   |               ^^^^^ unsatisfied trait bound
   |
   = help: the trait `Hooks<<<<T as frame_system::Config>::Block as frame_support::sp_runtime::traits::Block>::Header as frame_support::sp_runtime::traits::Header>::Number>` is not implemented for `pallet::Pallet<T>`
